# SimplestToDo

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: constants.h.570AC54B37066B37.idx  db.c.EC036D5C90F3B7EC.idx  db.h.D607D09BAD8F9D4F.idx  main.c.FCC50401A6E12548.idx  main_interface.h.7C12EEA67B1054BD.idx  setup.c.DAFEE88C448CF724.idx  setup.h.BD462965FA0EEF44.idx  structs.c.0BFD28E235002FA7.idx  structs.h.F58E2315CC9DABC9.idx  utils.c.AD999C929F1DD44D.idx  utils.h.145ABE28BB420C99.idx
src/: main.c
src/feats/: CMakeLists.txt  constants.h  db.c  main.c  setup.c  setup.h
src/interface/: CMakeLists.txt  main.c  main_interface.c  main_interface.h  utils.c  utils.h
src/libs/: CMakeLists.txt  constants.h  db.c  db.h  setup.c  setup.h  structs.c  structs.h  utils.c  utils.h
